--- a/socialmedia.css
+++ b/socialmedia.css
@@ -222,6 +222,13 @@
 
   }
 
+  @media only screen and (max-height:700px){
+
+    .centertext{
+      margin-top: 2%;
+    }
+  }
+
 
   @media only screen and (max-width:700px){
 
